# sole-backend

./: .dockerignore  .env.example  .env.prod  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  cloudbuild.yaml  compose.yaml  config.prod.yaml  env.prod.yaml  pyproject.toml  requirements.txt  setup.sh
app/: events.py  main.py
app/api/: auth_utils.py  deps.py
app/core/: context.py  errors.py  fernet_crypto.py  health.py  limiter.py  logging.py  permissions.py  response_envelope.py  security.py  settings.py  tenant.py
app/db/: base.py  encryption.py  init_db.py  session.py  url.py
app/middlewares/: concurrency_limit.py  request_context.py  security_headers.py  trust_proxies.py
app/models/: __init__.py  access_control_list.py  announcement.py  asset.py  audit_log.py  department.py  employee_stock_grant.py  identity.py  journal_entry.py  loan_application.py  loan_document.py  loan_repayment.py  loan_workflow_stage.py  org.py  org_document_folder.py  org_document_template.py  org_membership.py  org_settings.py  org_user_profile.py  pbgc_mid_term_rate.py  role.py  stock_grant_reservation.py  storage_backend_config.py  types.py  user.py  user_mfa_device.py  user_mfa_recovery_code.py  user_permission.py  user_role.py  vesting_event.py
app/resources/: countries.py  timezones.py
app/schemas/: acl.py  announcements.py  assets.py  audit.py  auth.py  common.py  departments.py  loan.py  onboarding.py  org_documents.py  orgs.py  pbgc_rates.py  roles.py  self.py  self_dashboard.py  settings.py  stock.py  user_permissions.py  users.py
app/services/: announcement_stream.py  announcements.py  audit.py  authz.py  eligibility.py  loan_applications.py  loan_dashboard.py  loan_exports.py  loan_payment_status.py  loan_queue.py  loan_quotes.py  loan_repayments.py  loan_schedules.py  loan_workflow.py  local_uploads.py  mfa.py  onboarding.py  org_documents.py  org_scoping.py  orgs.py  pbgc_rates.py  self_dashboard.py  settings.py  stock_dashboard.py  stock_grants.py  stock_reservations.py  stock_summary.py  user_dashboard.py  vesting_engine.py
app/utils/: __init__.py  login_security.py  rate_limit.py  redis_client.py
migrations/: env.py
scripts/: clean_locations.py  wipe_prod.py
scripts/setup/: setup-dev.sh  (+2 more)
tests/: conftest.py  test_assets_service.py  test_auth_endpoints.py  test_auth_inactivity.py  test_auth_mfa_logic.py  test_auth_step_up_rate_limit.py  test_eligibility.py  test_file_upload_vulnerability.py  test_health.py  test_loan_admin.py  test_loan_applications.py  test_loan_quotes.py  test_models.py  test_onboarding_service.py  test_org_isolation.py  test_org_settings.py  test_require_authenticated_user.py  test_security.py  test_stock_cache.py  test_stock_dashboard.py  test_stock_grant_audit.py  test_stock_grant_preview.py  test_stock_grants.py  test_stock_self.py  test_stock_summary.py  test_tenancy.py  test_vesting_engine.py
(+91 files in other folders)
