[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "sole-backend"
version = "0.1.0"
description = "SOLE backend FastAPI service"
authors = [{ name = "SOLE Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.23,<0.30",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "asyncpg>=0.29,<1.0",
  "psycopg[binary,pool]>=3.1,<4.0",
  "python-dotenv>=1.0,<2.0",
  "redis>=5.0,<6.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "python-multipart>=0.0.6,<0.1",
  "rapidfuzz>=3.8,<4.0",
  "slowapi>=0.1.9,<0.2.0",
  "cryptography>=41,<43",
  "email-validator>=2.0,<3.0",
  "bcrypt>=3.2,<4.0",
  "apscheduler>=3.10,<4.0",
  "beautifulsoup4>=4.12,<5.0",
  "httpx>=0.25,<0.28",
  "pyotp>=2.9,<3.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4,<0.6",
  "black>=24.4,<25.0",
  "mypy>=1.8,<2.0",
  "pytest>=7.4,<8.0",
  "pytest-asyncio>=0.23,<0.25",
  "pip-audit>=2.7,<3.0",
  "httpx>=0.25,<0.28"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]
